# skill-hands-on

./: README.md  pyproject.toml
dagster_hands_on/: README.md  definitions.py
dagster_hands_on/components/: tutorial.py
dagster_hands_on/defs/: assets.py  resources.py  schedules.py
dagster_hands_on/defs/tutorial/: defs.yaml
dbt/: .gitignore  .sqlfluff  dbt_project.yml  docker-compose.yml  profiles.yml
dbt/models/marts/: mart_employee_with_job_info.sql
dbt/models/sources/: employee_names.sql  employee_names.yml  job_simple_infos.sql  job_simple_infos.yml  source.yml
dbt/seeds/: jobs_mapping_jp.csv  schema.yml
dbt/snapshots/: employee_names_snapshot.sql
dbt/tests/generic/: not_empty_or_null_string.md  not_empty_or_null_string.sql  schema.yml
