[project]
name = "skill-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.0,<1.13",
    "dagster-webserver>=1.12.0,<1.13",
    "dbt-core>=1.11.2",
    "dbt-postgres>=1.10.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.0,<1.13",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_hands_on"
